--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "preview": "vite preview",
     "upload:video": "node supabase-integration/uploadVideo.js",
     "upload:board": "node supabase-integration/uploadBoardInfo.js",
-    "upload:events": "node supabase-integration/uploadEvents.js"
+    "upload:events": "node supabase-integration/uploadEvents.js",
+    "release": "standard-version"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.84.0",
@@ -33,6 +34,7 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "standard-version": "^9.5.0",
     "vite": "^7.2.4"
   }
 }
